--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,131 @@
-
 body {
-    background-color: #E0F0DB;
+    font-family: 'PT Sans', sans-serif;
+    margin: 0px;
+    line-height: 2;
+    text-align: center;
+}
+
+h1 {
+    color: #66BFBF;
+    font-family: 'Sacramento', cursive;
+    font-size: 5.625rem;
+    margin: 50px auto 0 auto;
+}
+
+h2 {
+    color: #66BFBF;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+}
+
+h3 {
+    color: #11999E;
+    font-family: 'Montserrat', sans-serif;
+}
+
+span{
+    text-decoration: underline;
 }
 
 hr {
-    background-color: white;
-    border-style: none;
-    height: 2px;
-    width: 30%;
+    border: dotted #EAF6F6 10px;
+    border-bottom: none;
+    width: 10%;
+    margin: 100px auto;
 }
 
-h1,h3 {
-    color: #66BFBF;
+
+.top {
+    background-color: #EAF6F6;
+    position: relative;
+}
+
+.bottom {
+    background-color: #66BFBF;
+}
+
+.profile_pic {
+    border-radius: 50%;
+    width: 25%;
+}
+
+.skill-row {
+    margin: 100px auto 100px auto;
+    text-align: left;
+    width: 50%;
+}
+
+.skill1 {
+    width: 25%;
+    float: left;
+    margin: 30px;
+}
+
+.skill2 {
+    width: 25%;
+    float: right;
+    margin: 30px;
+}
+
+.footer-link {
+    color: #11999E;
+}
+
+.white-text {
+    color: #EAF6F6;
+    font-size: .75em;
+    padding: 20px;
+}
+
+.texts {
+    color: #40514E;
+}
+
+.contact-para {
+    width: 40%;
+    margin: 40px auto 60px;
+}
+
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+
+#cloud1 {
+    left: 20%;
+    position: relative;
+    margin-top: 20px;
+}
+
+#cloud2 {
+    position: absolute;
+    left: 20%;
+    bottom: 50%;
+}
+
+#tagline {
+    font-weight: normal;
 }
